--- a/src/main/resources/templates/question_list.html
+++ b/src/main/resources/templates/question_list.html
@@ -39,17 +39,17 @@
         </tbody>
     </table>
     <!-- 페이징처리 시작 -->
-    <div th:if="${!paging.isEmpty()}">
+    <div th:if="${!paging.isEmpty()}" th:with="queryStrBase = '?kw=' + ${param.kw != null ? param.kw : ''}">
         <ul class="pagination justify-content-center">
             <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
                 <a class="page-link"
-                   th:href="@{?page=0}">
+                   th:href="@{|${queryStrBase}&page=0|}">
                     <span>처음</span>
                 </a>
             </li>
             <li class="page-item" th:classappend="${!paging.hasPrevious} ? 'disabled'">
                 <a class="page-link"
-                   th:href="@{|?page=${paging.number-1}|}">
+                   th:href="@{|${queryStrBase}&page=${paging.number-1}|}">
                     <span>이전</span>
                 </a>
             </li>
@@ -57,15 +57,15 @@
                 th:if="${page >= paging.number-5 and page <= paging.number+5}"
                 th:classappend="${page == paging.number} ? 'active'"
                 class="page-item">
-                <a th:text="${page+1}" class="page-link" th:href="@{|?page=${page}|}"></a>
+                <a th:text="${page+1}" class="page-link" th:href="@{|${queryStrBase}&page=${page}|}"></a>
             </li>
             <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
-                <a class="page-link" th:href="@{|?page=${paging.number+1}|}">
+                <a class="page-link" th:href="@{|${queryStrBase}&page=${paging.number+1}|}">
                     <span>다음</span>
                 </a>
             </li>
             <li class="page-item" th:classappend="${!paging.hasNext} ? 'disabled'">
-                <a class="page-link" th:href="@{|?page=${paging.totalPages-1}|}">
+                <a class="page-link" th:href="@{|${queryStrBase}&page=${paging.totalPages-1}|}">
                     <span>마지막</span>
                 </a>
             </li>
