--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -9,11 +9,16 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/login}">로그인</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" sec:authorize="isAuthenticated()" href="javascript:;" onclick="this.nextElementSibling.submit();">로그아웃</a>
                     <form hidden th:action="@{/user/logout}" method="post"></form>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/user/signup}">회원가입</a>
+                    <a class="nav-link" sec:authorize="isAnonymous()" th:href="@{/user/signup}">회원가입</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" sec:authorize="isAuthenticated()" th:href="@{/user/profile}">프로필</a>
                 </li>
             </ul>
         </div>
