--- a/src/main/resources/templates/question_form.html
+++ b/src/main/resources/templates/question_form.html
@@ -5,6 +5,12 @@
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
         <div th:replace="~{form_errors :: formErrorsFragment}"></div>
         <div class="mb-3">
+            <label for="category" class="form-label">카테고리</label>
+            <select class="form-select" th:field="*{category}">
+                <option th:each="category : ${categoryList}" th:value="${category.name}" th:text="${category.id} == 1 ? '질문게시판' : '자유게시판'"></option>
+            </select>
+        </div>
+        <div class="mb-3">
             <label for="subject" class="form-label">제목</label>
             <input type="text" th:field="*{subject}" class="form-control">
         </div>
